# your_my_sql

./: .gitignore  CONFIG_README.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  setup.rs
src-tauri/src/commands/: config.rs  database.rs  mod.rs  window.rs
src-tauri/you_my_sql_config/: Cargo.toml
src-tauri/you_my_sql_config/src/: lib.rs
src-tauri/you_my_sql_db/: Cargo.toml
src-tauri/you_my_sql_db/src/: lib.rs
src/components/: ConfigSettings.vue  ConnectionForm.vue  DatabaseExplorer.vue  SqlEditor.vue  SqlTool.vue
src/stores/: db.ts  db.types.ts
src/utils/: clipboardUtils.ts  sqlUtils.ts
