[package]
name = "you_my_sql"
version = "0.1.0"
description = "You are my SQL"
authors = ["davelet"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "you_my_sql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
you_my_sql_db = { path = "./you_my_sql_db" }
you_my_sql_config = { path = "./you_my_sql_config" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
mysql = "24.0.0"
r2d2 = "0.8.10"
r2d2_mysql = "24.0.0"
thiserror = "1.0.50"
dotenv = "0.15.0"
lazy_static = "1.4.0"
toml = "0.8.0"
dirs = "5.0.1"

