[package]
name = "you_my_sql"
version = "0.1.1"
description = "You are my SQL"
authors = ["davelet <sheldon.sh.hb@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/davelet/you_my_sql"
homepage = "https://github.com/davelet/you_my_sql"
documentation = "https://github.com/davelet/you_my_sql#readme"
keywords = ["sql", "database", "tauri", "vue", "client"]
categories = ["database", "gui", "tauri"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "you_my_sql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
you_my_sql_db = { path = "./you_my_sql_db" }
you_my_sql_config = { path = "./you_my_sql_config" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

